# mganga

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MINDMAP.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-exe.yml  ci.yml  pages.yml
mganga-docs/: CLAUDE.md
mganga-docs/docs/: build-plan.md  references.md  ui-guide.md  windows-internals.md
site/: index.html
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  audit.rs  autostart.rs  broker_client.rs  evidence.rs  guard.rs  judge.rs  known_apps.json  lib.rs  main.rs  proc_control.rs  processes.rs  settings.rs  updater.rs  usage.rs
