[package]
name = "mganga"
version = "0.1.1"
description = "Mganga, a Windows resource healer"
authors = ["you"]
edition = "2021"
default-run = "mganga"

[[bin]]
name = "mganga"
path = "src/main.rs"

# The broker: a small separate binary that runs elevated and does the privileged
# work over a named pipe. See mganga-docs/CLAUDE.md, "Architecture: the broker".
[[bin]]
name = "mganga-broker"
path = "src/bin/broker.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mganga_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.55"
csv = "1"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
sysinfo = "0.39.3"
tokio = { version = "1", features = ["time"] }

